--- a/ConfigData/application.yml
+++ b/ConfigData/application.yml
@@ -1,12 +1,13 @@
+server:
+  port: 8001
+
 spring:
   cloud:
     config:
       server:
         git:
           uri: https://github.com/htrzak/MicroServices
-          search-paths: ConfigData
+          searchPaths: ConfigData
         # "native" is used when the native profile is active, for local test with a classpath repo:
         native:
-          search-locations: classpath:offline-repository/
-server:
-  port: 8001
+          searchLocations: classpath:offline-repository/
